--- a/Main.html
+++ b/Main.html
@@ -3,14 +3,14 @@
         <head>
             <title>Trojans net</title>
             <link rel="stylesheet" href="style.css">
-            <link rel="icon" href="Assets/Whatever.jpg">
+            <link rel="icon" href="Assets/trojansnet.png">
             <script src="script.js"></script>
         </head>
         <body>
             <div class ="header">
                 <h1 class="Chat">Chat</h1>
                 <h1 class="People">People</h1>
-                <div class="circle">
+                <div class="circle1">
                     
                     
                 </div>
