--- a/Login.html
+++ b/Login.html
@@ -3,6 +3,7 @@
         <head>
             <title>Trojans net</title>
             <link rel="stylesheet" href="style.css">
+            <link rel="icon" href="Assets/trojansnet.png">
         </head>
         <body>
             <form action="action_page.php">
